--- a/registration.html
+++ b/registration.html
@@ -1,67 +1,104 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Регистрация</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/styles/styles.css">
+
+    <style>
+        body {
+            padding-top: 70px;
+        }
+        .sidebar {
+            position: fixed;
+            top: 70px;
+            left: 0;
+            bottom: 0;
+            width: 250px;
+            background-color: #f8f9fa;
+            padding: 20px;
+            box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+            overflow-y: auto;
+        }
+        .main-content {
+            margin-left: 250px;
+            padding: 40px 20px;
+        }
+        @media (max-width: 992px) {
+            .sidebar {
+                width: 100%;
+                height: auto;
+                position: relative;
+                top: 0;
+            }
+            .main-content {
+                margin-left: 0;
+            }
+        }
+    </style>
 </head>
 <body>
 
-<header class="top-menu">
-    <nav>
-        <ul>
-            <li><a href="index.html">Главная</a></li>
-            <li><a href="login.html">Вход</a></li>
-            <li><a href="registration.html" class="active">Регистрация</a></li>
-            <li><a href="about.html">О проекте</a></li>
-            <li><a href="contacts.html">Контакты</a></li>
-        </ul>
-    </nav>
-</header>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">Мой сайт</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
+                <li class="nav-item"><a class="nav-link" href="login.html">Вход</a></li>
+                <li class="nav-item"><a class="nav-link active" href="registration.html">Регистрация</a></li>
+                <li class="nav-item"><a class="nav-link" href="about.html">О проекте</a></li>
+                <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
-<aside class="side-menu">
-    <ul>
-        <li><a>Новости</a></li>
-        <li><a>Каталог</a></li>
-        <li><a>Форум</a></li>
-        <li><a>Поддержка</a></li>
-        <li><a href="faq.html">FAQ</a></li>
-        <li><a href="blog.html">Блог</a></li>
+<div class="sidebar">
+    <h5 class="mb-3">Меню</h5>
+    <ul class="nav flex-column">
+        <li class="nav-item"><a class="nav-link" href="#">Новости</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Каталог</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Форум</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Поддержка</a></li>
+        <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
+        <li class="nav-item"><a class="nav-link" href="blog.html">Блог</a></li>
     </ul>
-</aside>
+</div>
 
-<main class="content d-flex justify-content-center align-items-center vh-100">
-    <div class="card shadow p-4" style="width: 25rem;">
+<main class="main-content d-flex justify-content-center align-items-start">
+    <div class="auth-form">
         <h2 class="text-center mb-4">Регистрация</h2>
         <form>
             <div class="mb-3">
                 <label for="username" class="form-label">Имя пользователя</label>
                 <input type="text" class="form-control" id="username" required>
             </div>
-
             <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
                 <input type="email" class="form-control" id="email" required>
             </div>
-
             <div class="mb-3">
                 <label for="password" class="form-label">Пароль</label>
                 <input type="password" class="form-control" id="password" required>
             </div>
-
             <div class="form-check mb-3">
                 <input class="form-check-input" type="checkbox" id="eula" required>
                 <label class="form-check-label" for="eula">
                     Я ознакомлен с условиями использования (EULA)
                 </label>
             </div>
-
             <button type="submit" class="btn btn-success w-100">Зарегистрироваться</button>
         </form>
     </div>
 </main>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
